Fix nowrap

--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -606,3 +606,7 @@ div.json.fullheight {
 .cursor-pointer {
     cursor: pointer;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
